--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
 
     <main class="container mx-auto px-6 py-12">
         <section class="bg-white rounded-lg shadow-lg p-10 text-center">
-            <img src="images/profil.jpg" alt="Votre photo de profil" class="rounded-full w-32 h-32 mx-auto mb-6">
+            <img src="image/profil.png" alt="Photo de profil" class="rounded-full h-32 mx-auto mb-6">
             <h1 class="text-4xl font-bold text-gray-900 mb-4">Bonjour, je suis Jérémy Loubeyre</h1>
             <p class="text-xl text-gray-700 mb-8">
                 Étudiant en BTS SIO (SLAM) | Développeur Web et Logiciel
             </p>
-            <a href="projects.html" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-4 px-8 rounded-full shadow-md">Voir mes projets</a>
+            <a href="about.html" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-4 px-8 rounded-full shadow-md">Voir mon profil</a>
         </section>
 
         <section class="py-10">
             <div class="bg-white rounded-lg shadow-lg p-8">
                 <h2 class="text-2xl font-semibold text-gray-900 mb-6 text-center">À Propos de Moi</h2>
                 <p class="text-gray-700 leading-relaxed mb-6">
-                    Actuellement étudiant en 2ème année de BTS SIO option SLAM au Lycée Chevrollier à Angers[cite: 1], je suis passionné par le développement web et logiciel.
-                    J'ai acquis des compétences solides en **Développement Web** (HTML, CSS, PHP, Javascript, CMS WordPress, Création d'API Rest, Framework Laravel, VueJS, HTMX), **Base de Données** (SQL, MariaDB, NoSQL), et **Développement Applicatif** (C#, Java, Dart Flutter).
-                    Je maîtrise également la **Gestion de Projet** avec des outils comme Trello, Git, et les diagrammes de Gantt, ainsi que les **Systèmes et Réseaux** (serveurs Web/BD, Apache, GLPI, MySQL, Docker, SSH).
+                    Actuellement étudiant en 2ème année de BTS SIO option SLAM au Lycée Chevrollier à Angers, je suis passionné par le développement web et logiciel.
+                    <br><br>J'ai acquis des compétences solides en : <br> &nbsp;&nbsp;&nbsp;- Développement Web (HTML, CSS, PHP, Javascript, CMS WordPress, &nbsp;&nbsp;&nbsp;Création d'API Rest, Framework Laravel, VueJS, HTMX) <br> &nbsp;&nbsp;&nbsp;- Base de Données (SQL, MariaDB, NoSQL) <br> &nbsp;&nbsp;&nbsp;- Développement Applicatif (C#, Java, Dart Flutter)
+                    <br><br>Je maîtrise également la gestion de projet avec des outils comme Trello, Git, et les diagrammes de Gantt, ainsi que les Systèmes et Réseaux (serveurs Web/BD, Apache, GLPI, MySQL, Docker, SSH).
                     <a href="page/about.html" class="text-indigo-600 hover:underline">En savoir plus sur moi...</a>
                 </p>
             </div>
@@ -82,15 +82,16 @@
                 <h2 class="text-2xl font-semibold text-gray-900 mb-6">Contactez-moi</h2>
                 <p class="text-gray-700 leading-relaxed mb-6">
                     N'hésitez pas à me contacter pour discuter d'opportunités d'alternance ou de projets web.
-                    Vous pouvez me joindre par email à <a href="mailto:jeremy.loubeyre44@gmail.com" class="text-indigo-600 hover:underline">jeremy.loubeyre44@gmail.com</a> [cite: 1] ou par téléphone au 07 67 96 37 24[cite: 1].
+                    Vous pouvez me joindre par email à <a href="mailto:jeremy.loubeyre44@gmail.com" class="text-indigo-600 hover:underline">jeremy.loubeyre44@gmail.com</a> ou par téléphone au 07 67 96 37 24.
                     <a href="contact.html" class="text-indigo-600 hover:underline">Aller à la page de contact</a>
                 </p>
             </div>
         </section>
     </main>
-
-    <footer class="bg-gray-100 py-6 text-center text-gray-700">
-        <p>&copy; 2025 Jérémy Loubeyre. Tous droits réservés.</p>
-    </footer>
 </body>
+
+<footer class="bg-gray-100 py-6 text-center text-gray-700">
+    <p>&copy; 2025 Jérémy Loubeyre. Tous droits réservés.</p>
+</footer>
+
 </html>
