Add pdf download CV

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             </p>
             
             <div class="border-t border-b border-gray-200 text-center mt-8  border-gray-300 p-4 inline-block">
-                <a href="Jeremy-Loubeyre-CV.pdf" download
+                <a href="pdf/Jeremy-Loubeyre-CV.pdf" download
                    class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded-full shadow-md inline-block">
                     Télécharger mon CV
                 </a>
