--- a/contact.html
+++ b/contact.html
@@ -1,44 +1,96 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Assurez-vous que ce fichier CSS correspond au design des autres pages -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact | Jérémy Loubeyre</title>
+    <script src="https://cdn.tailwindcss.com/3.4.16"></script>
+    <script>
+        tailwind.config = { darkMode: "class" };
+    </script>
+    <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
-            </ul>
+
+<body class="bg-gray-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200 font-sans relative">
+    <!-- Header simple -->
+    <header class="fixed top-6 left-1/2 transform -translate-x-1/2 z-50">
+        <nav
+            class="backdrop-blur bg-white/80 dark:bg-gray-800/70 shadow-md rounded-full px-6 py-3 flex items-center gap-6 text-sm text-gray-700 dark:text-gray-300 font-medium">
+            <a href="index.html" class="hover:text-indigo-600 transition">Accueil</a>
+            <a href="about.html" class="hover:text-indigo-600 transition">Profil</a>
+            <a href="projects.html" class="hover:text-indigo-600 transition">Projets</a>
+            <button id="theme-toggle" class="lg:ml-2 text-xl hover:text-yellow-400 dark:hover:text-white transition" aria-label="Toggle dark mode">
+                <img id="theme-icon" src="image/iconsDark.png" alt="Thème sombre" class="w-6 h-6" />
+            </button>
         </nav>
     </header>
 
-    <main>
-        <section class="contact-section">
-            <h1>Contactez-moi</h1>
-            <p>Vous avez une question ou un projet ? Remplissez le formulaire ci-dessous pour me contacter.</p>
-            <form action="submit_form.php" method="POST" class="contact-form">
-                <label for="name">Nom :</label>
-                <input type="text" id="name" name="name" required>
+    <!-- Main -->
+    <main class="pt-32 px-6 md:px-16 lg:px-32 pb-20">
+        <section class="max-w-5xl mx-auto bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-10 lg:p-16">
+            <h1 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
+                Contactez-moi
+            </h1>
+            <p class="text-gray-600 dark:text-gray-300 mb-8">
+                Une question, un projet ou une opportunité ? Envoyez-moi un message
+                ci-dessous.
+            </p>
 
-                <label for="email">Email :</label>
-                <input type="email" id="email" name="email" required>
+            <!-- Contact Form -->
+            <form action="submit_form.php" method="POST" class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <!-- Nom -->
+                <div class="col-span-1">
+                    <label for="name"
+                        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Nom</label>
+                    <input type="text" id="name" name="name" required
+                        class="w-full px-4 py-3 rounded-lg bg-gray-100 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:focus:ring-indigo-400" />
+                </div>
 
-                <label for="message">Message :</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
+                <!-- Email -->
+                <div class="col-span-1">
+                    <label for="email"
+                        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Email</label>
+                    <input type="email" id="email" name="email" required
+                        class="w-full px-4 py-3 rounded-lg bg-gray-100 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:focus:ring-indigo-400" />
+                </div>
 
-                <button type="submit">Envoyer</button>
+                <!-- Message -->
+                <div class="col-span-1 md:col-span-2">
+                    <label for="message"
+                        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Message</label>
+                    <textarea id="message" name="message" rows="6" required
+                        class="w-full px-4 py-3 rounded-lg bg-gray-100 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:focus:ring-indigo-400 resize-none"></textarea>
+                </div>
+
+                <!-- Submit -->
+                <div class="col-span-1 md:col-span-2 text-right">
+                    <button type="submit"
+                        class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-6 py-3 rounded-full shadow transition duration-200">
+                        Envoyer
+                    </button>
+                </div>
             </form>
+
+            <!-- Coordonnées -->
+            <div class="mt-12 border-t pt-8 text-sm text-gray-700 dark:text-gray-300">
+                <p class="mb-2">
+                    <strong>Email :</strong>
+                    <a href="mailto:jeremy.loubeyre44@gmail.com"
+                        class="text-indigo-500 hover:underline">jeremy.loubeyre44@gmail.com</a>
+                </p>
+                <p><strong>Téléphone :</strong> 07 67 96 37 24</p>
+            </div>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2023 Mon Portfolio. Tous droits réservés.</p>
+    <!-- Script Dark Mode -->
+    <script src="darkLightMode.js"></script>
+
+    <!-- Footer -->
+    <footer class="bg-gray-50 dark:bg-gray-900 py-6 text-center text-gray-700 dark:text-gray-400 mt-10">
+        <p>&copy; 2025 Jérémy Loubeyre. Tous droits réservés.</p>
     </footer>
 </body>
+
 </html>
