--- a/index.html
+++ b/index.html
@@ -4,36 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com/3.4.16"></script>
+    <script src="darkLightCache.js"></script>
+    <script>tailwind.config = {darkMode: 'class'}</script>
+    <link rel="stylesheet" href="style.css">
     <title>Portfolio de Jérémy Loubeyre</title>
 </head>
-<body class="bg-gray-50 font-sans">
-    <header class="bg-white shadow-md py-6">
-        <nav class="container mx-auto px-6">
-            <div class="flex justify-between items-center">
-                <a href="#" class="text-2xl font-bold text-gray-900">Jérémy Loubeyre</a>
-                <ul class="flex space-x-8">
-                    <li><a href="about.html" class="text-gray-700 hover:text-indigo-600">À propos</a></li>
-                    <li><a href="projects.html" class="text-gray-700 hover:text-indigo-600">Projets</a></li>
-                    <li><a href="contact.html" class="text-gray-700 hover:text-indigo-600">Contact</a></li>
-                </ul>
-            </div>
+<body class="relative font-sans text-gray-800 dark:text-gray-200">
+    <header class="fixed top-6 left-1/2 transform -translate-x-1/2 z-50">
+        <nav class="backdrop-blur bg-white/80 dark:bg-gray-800/70 shadow-md rounded-full px-6 py-3 flex items-center gap-6 text-sm text-gray-700 dark:text-gray-300 font-medium">
+            <a href="about.html" class="hover:text-indigo-600 transition">Profil</a>
+            <a href="projects.html" class="hover:text-indigo-600 transition">Projets</a>
+            <a href="contact.html" class="hover:text-indigo-600 transition">Contact</a>
+            <button id="theme-toggle" class="ml-2 text-xl hover:text-yellow-400 dark:hover:text-white transition" aria-label="Toggle dark mode">
+                <img id="theme-icon" src="image/iconsDark.png" alt="Thème sombre" class="w-6 h-6">
+            </button>   
         </nav>
     </header>
 
-    <main class="container mx-auto px-6 py-12">
-        <section class="bg-white rounded-lg shadow-lg p-10 text-center">
+    <main class="container mx-auto px-6 py-12"><br><br>
+        <section class="p-10 text-center">
             <img src="image/profil.png" alt="Photo de profil" class="rounded-full h-32 mx-auto mb-6">
-            <h1 class="text-4xl font-bold text-gray-900 mb-4">Bonjour, je suis Jérémy Loubeyre</h1>
-            <p class="text-xl text-gray-700 mb-8">
+            <h1 class="text-4xl font-bold text-gray-800 dark:text-white mb-4">Bonjour, je suis Jérémy Loubeyre</h1>
+            <p class="text-xl text-gray-500 dark:text-gray-400 mb-8">
                 Étudiant en BTS SIO (SLAM) | Développeur Web et Logiciel
-            </p>
+            </p><br>
             <a href="about.html" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-4 px-8 rounded-full shadow-md">Voir mon profil</a>
         </section>
 
-        <section class="py-10">
-            <div class="bg-white rounded-lg shadow-lg p-8">
-                <h2 class="text-2xl font-semibold text-gray-900 mb-6 text-center">À Propos de Moi</h2>
-                <p class="text-gray-700 leading-relaxed mb-6">
+        <section class="py-10 lg:px-20">
+            <div class="bg-white dark:bg-gray-800 bg-opacity-90 dark:bg-opacity-60 rounded-lg shadow-lg p-8">
+                <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-6 text-center">À Propos de Moi</h2>
+                <p class="text-gray-700 dark:text-gray-300 leading-relaxed lg:mx-32 mb-6">
                     Actuellement étudiant en 2ème année de BTS SIO option SLAM au Lycée Chevrollier à Angers, je suis passionné par le développement web et logiciel.
                     <br><br>J'ai acquis des compétences solides en : <br> &nbsp;&nbsp;&nbsp;- Développement Web (HTML, CSS, PHP, Javascript, CMS WordPress, &nbsp;&nbsp;&nbsp;Création d'API Rest, Framework Laravel, VueJS, HTMX) <br> &nbsp;&nbsp;&nbsp;- Base de Données (SQL, MariaDB, NoSQL) <br> &nbsp;&nbsp;&nbsp;- Développement Applicatif (C#, Java, Dart Flutter)
                     <br><br>Je maîtrise également la gestion de projet avec des outils comme Trello, Git, et les diagrammes de Gantt, ainsi que les Systèmes et Réseaux (serveurs Web/BD, Apache, GLPI, MySQL, Docker, SSH).
@@ -42,56 +43,40 @@
             </div>
         </section>
 
-        <section class="py-10">
-            <h2 class="text-2xl font-semibold text-gray-900 mb-6 text-center">Mes Projets Récents</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                    <img src="images/projet1.jpg" alt="Nom du projet 1" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold text-gray-900 mb-3">Nom du Projet 1</h3>
-                        <p class="text-gray-700 text-sm mb-4">Courte description du projet 1 et des technologies utilisées.</p>
-                        <a href="#" class="text-indigo-600 hover:underline">Voir le projet</a>
-                    </div>
-                </div>
+        <section class="py-20 lg:px-64">
+            <h2 class="text-2xl font-semibold text-gray-900 dark:text-white text-center mb-10">Aperçu Visuel de Mes Projets</h2>
 
-                <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                    <img src="images/projet2.jpg" alt="Nom du projet 2" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold text-gray-900 mb-3">Nom du Projet 2</h3>
-                        <p class="text-gray-700 text-sm mb-4">Courte description du projet 2 et des technologies utilisées.</p>
-                        <a href="#" class="text-indigo-600 hover:underline">Voir le projet</a>
-                    </div>
+            <div class="relative overflow-hidden mt-20">
+                <div class="flex animate-scroll gap-10 w-max">
+                    <!-- Tu peux dupliquer ou varier les images -->
+                    <a href="projects.html"><img src="image/VitrineFinalAp3.png" alt="Projet 1" class="h-40 w-auto rounded-xl shadow-md object-cover" /></a>
+                    <a href="projects.html"><img src="image/VitrineFinalAp4.png" alt="Projet 2" class="h-40 w-auto rounded-xl shadow-md object-cover" /></a>
+                    <a href="projects.html"><img src="image/VitrineFinalHackathon.png" alt="Projet 3" class="h-40 w-auto rounded-xl shadow-md object-cover" /></a>
+                    <a href="projects.html"><img src="image/VitrineFinalPykémon.png" alt="Projet 4" class="h-40 w-auto rounded-xl shadow-md object-cover" /></a>
+                    <a href="projects.html"><img src="image/VitrineFinalAp3.png" alt="Projet 5" class="h-40 w-auto rounded-xl shadow-md object-cover" /></a>
+                    <a href="projects.html"><img src="image/VitrineFinalAp4.png" alt="Projet 6" class="h-40 w-auto rounded-xl shadow-md object-cover" /></a>
+                    <a href="projects.html"><img src="image/VitrineFinalHackathon.png" alt="Projet 7" class="h-40 w-auto rounded-xl shadow-md object-cover" /></a>
+                    <a href="projects.html"><img src="image/VitrineFinalPykémon.png" alt="Projet 8" class="h-40 w-auto rounded-xl shadow-md object-cover" /></a>
                 </div>
-
-                <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                    <img src="images/projet3.jpg" alt="Nom du projet 3" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold text-gray-900 mb-3">Nom du Projet 3</h3>
-                        <p class="text-gray-700 text-sm mb-4">Courte description du projet 3 et des technologies utilisées.</p>
-                        <a href="#" class="text-indigo-600 hover:underline">Voir le projet</a>
-                    </div>
-                </div>
-            </div>
-            <div class="text-center mt-8">
-                <a href="projects.html" class="text-indigo-600 hover:underline">Voir tous mes projets</a>
             </div>
         </section>
 
-        <section class="py-10">
-            <div class="bg-white rounded-lg shadow-lg p-8 text-center">
-                <h2 class="text-2xl font-semibold text-gray-900 mb-6">Contactez-moi</h2>
-                <p class="text-gray-700 leading-relaxed mb-6">
-                    N'hésitez pas à me contacter pour discuter d'opportunités d'alternance ou de projets web.
-                    Vous pouvez me joindre par email à <a href="mailto:jeremy.loubeyre44@gmail.com" class="text-indigo-600 hover:underline">jeremy.loubeyre44@gmail.com</a> ou par téléphone au 07 67 96 37 24.
-                    <a href="contact.html" class="text-indigo-600 hover:underline">Aller à la page de contact</a>
+        <section class="py-10  lg:px-20">
+            <div class="bg-white dark:bg-gray-800 bg-opacity-90 dark:bg-opacity-50 rounded-lg shadow-lg p-8 text-center">
+                <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-6">Contactez-moi</h2>
+                <p class="text-gray-700 dark:text-gray-300 leading-relaxed mb-6">
+                    N'hésitez pas à me contacter pour discuter d'opportunités d'alternance ou de projets web. 
+                    Je suis toujours ouvert à de nouvelles collaborations et défis.
+                    <br class="hidden lg:block">Vous pouvez me joindre par email à <a href="mailto:jeremy.loubeyre44@gmail.com" 
+                    class="text-indigo-600 hover:underline">jeremy.loubeyre44@gmail.com</a> ou par téléphone au 07 67 96 37 24.
                 </p>
             </div>
         </section>
     </main>
+    <script src="darkLightMode.js"></script>
 </body>
 
-<footer class="bg-gray-100 py-6 text-center text-gray-700">
+<footer class="bg-gray-50 dark:bg-gray-900 bg-opacity-85 dark:bg-opacity-85 py-6 text-center text-gray-700 dark:text-gray-400">
     <p>&copy; 2025 Jérémy Loubeyre. Tous droits réservés.</p>
 </footer>
-
 </html>
