--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,118 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.tailwindcss.com/3.4.16"></script>
+    <script src="darkLightCache.js"></script>
+    <script>tailwind.config = {darkMode: 'class'}</script>
+    <link rel="stylesheet" href="style.css">
+    <title>Projets</title>
 </head>
-<body>
+
+<body class="relative font-sans text-gray-800 dark:text-gray-200">
+    <header class="fixed top-6 left-1/2 transform -translate-x-1/2 z-50">
+        <nav class="backdrop-blur bg-white/80 dark:bg-gray-800/70 shadow-md rounded-full px-6 py-3 flex items-center gap-2 gap-6 text-sm text-left text-gray-700 dark:text-gray-300 font-medium">
+            <a href="index.html" class="hover:text-indigo-600 transition">Accueil</a>
+            <a href="about.html" class="hover:text-indigo-600 transition">Profil</a>
+            <a href="contact.html" class="hover:text-indigo-600 transition">Contact</a>
+            <button id="theme-toggle" class="lg:ml-2 text-xl hover:text-yellow-400 dark:hover:text-white transition" aria-label="Toggle dark mode">
+                <img id="theme-icon" src="image/iconsDark.png" alt="Thème sombre" class="w-6 h-6">
+            </button>        
+        </nav>
+    </header>
+
+    <main><br><br>
+        <section class="px-6 md:px-16 lg:px-32 py-20">
+            <div class="text-center mb-20 lg:mb-10 lg:mx-64">
+                <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">Un aperçu de mes projets</h2><br>
+                <p class="text-gray-600 dark:text-gray-300 text">
+                Voici quelques-uns de mes projets récents dont je suis particulièrement fier, illustrant mon envie de progresser, <br class="hidden lg:block">toujours avec sérieux et curiosité.
+                </p><br><br>
+            </div>
+
+            <div class="relative flex flex-col lg:flex-row-reverse items-center lg:items-start justify-center max-w-6xl mx-auto mb-20">
+                <div class="w-full lg:w-1/2 relative lg:absolute lg:left-0 lg:top-5 z-10 max-w-sm md:max-w-md lg:max-w-lg lg:pr-5 lg:mb-0">
+                    <div class="bg-blue-100 dark:bg-blue-900 p-6 rounded-3xl shadow-xl">
+                        <img src="image/VitrineFinalAp3.png" alt="Aperçu projet 1" class="rounded-xl shadow-lg" />
+                    </div>
+                </div>
+
+                <div class="w-full lg:w-[70%] lg:ml-[20%] bg-white dark:bg-gray-800 p-8 lg:py-10 mb-20 lg:mb-20 lg:px-12 lg:pl-64 m-10 rounded-3xl shadow-lg relative z-0">
+                    <h3 class="text-2xl font-semibold text-gray-900 dark:text-white mb-2">Hackat'Innov</h3>
+                    <p class="text-gray-600 dark:text-gray-300 mb-6">
+                        Une application en C# sous Visual Studio 2022. Cette apllication a pour but de pouvoir gérer et organiser des hackathons. Elle permet d'enregistrer les participants, de créer des équipes et de planifier les épreuves.
+
+                    </p>
+                    <a href="#" target="_blank" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-semibold py-2 px-5 rounded-full transition">
+                        Découvrir le projet
+                    </a>
+                </div>
+            </div>
+
+            <div class="relative flex flex-col lg:flex-row-reverse items-center lg:items-start justify-center max-w-6xl mx-auto mt-20 mb-20">
+                <div class="w-100 lg:w-1/2 relative lg:absolute lg:right-10 lg:-top-7 z-10 max-w-sm md:max-w-md lg:w-100 mb-10 lg:mb-0">
+                    <div class="bg-indigo-100 dark:bg-sky-900 p-6 rounded-3xl shadow-xl">
+                        <img src="image/VitrineFinalAp4.png" alt="Aperçu projet 4" class="rounded-xl shadow-lg" />
+                    </div>
+                </div>
+
+                <div class="w-full lg:w-[70%] lg:mr-[20%] bg-white dark:bg-gray-800 p-8 mb-20 lg:mb-16 lg:py-16 lg:px-12 lg:pr-64 rounded-3xl shadow-lg relative z-0 text-right">
+                    <h3 class="text-2xl font-semibold text-gray-900 dark:text-white mb-2">L'ancre De Breizh</h3>
+                    <p class="text-gray-600 dark:text-gray-300 mb-6">
+                        Une application en flutter sous Android Studio. Le projet se nomme "L’Ancre de Breizh" un restaurant spécialisé dans la nourriture bretonne et l'application Mobile permet de consulter le menu, de passer des commandes et de réserver une table.
+                    </p>
+                    <a href="#" target="_blank" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-semibold py-2 px-5 rounded-full transition">
+                        Découvrir le projet
+                    </a>
+                </div>
+            </div>
+
+            <div class="relative flex flex-col lg:flex-row-reverse items-center lg:items-start justify-center max-w-6xl mx-auto mb-20">
+                <div class="w-full lg:w-1/2 relative lg:absolute lg:left-0 lg:top-5 z-10 max-w-sm md:max-w-md lg:max-w-lg lg:pr-5 lg:mb-0">
+                    <div class="bg-orange-100 dark:bg-yellow-900 p-6 rounded-3xl shadow-xl">
+                        <img src="image/VitrineFinalHackathon.png" alt="Aperçu projet 3" class="rounded-xl shadow-lg" />
+                    </div>
+                </div>
+
+                <div class="w-full lg:w-[70%] lg:ml-[20%] bg-white dark:bg-gray-800 p-8 py-10 mb-20 lg:mb-20 lg:px-12 lg:pl-64 m-10 rounded-3xl shadow-lg relative z-0">
+                    <h3 class="text-2xl font-semibold text-gray-900 dark:text-white mb-2">Tous au Sport !</h3>
+                    <p class="text-gray-600 dark:text-gray-300 mb-6">
+                        Un site web en HTML et CSS sous visual studio Code. Ce site a pour but de pouvoir visualiser toutes les installations sportive, tout les parkings à vélo ou parkings de véhicules et leurs disponibilités.
+
+                    </p>
+                    <a href="#" target="_blank" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-semibold py-2 px-5 rounded-full transition">
+                        Découvrir le projet
+                    </a>
+                </div> 
+            </div>
+
+            <div class="relative flex flex-col lg:flex-row-reverse items-center lg:items-start justify-center max-w-6xl mx-auto mt-20 mb-20">
+                <div class="w-100 lg:w-1/2 relative lg:absolute lg:right-10 lg:-top-7 z-10 max-w-sm md:max-w-md lg:w-100 mb-10 lg:mb-0">
+                    <div class="bg-green-100 dark:bg-emerald-900 p-6 rounded-3xl shadow-xl">
+                        <img src="image/VitrineFinalPykémon.png" alt="Aperçu projet 4" class="rounded-xl shadow-lg" /> 
+                    </div>
+                </div>
+
+                <div class="w-full lg:w-[70%] lg:mr-[20%] bg-white dark:bg-gray-800 p-8 lg:py-16 lg:px-12 lg:pr-64 rounded-3xl shadow-lg relative z-0 text-right">
+                    <h3 class="text-2xl font-semibold text-gray-900 dark:text-white mb-2">Pykémon</h3>
+                    <p class="text-gray-600 dark:text-gray-300 mb-6">
+                        Un jeu Python simple développé en équipe avec Pygame. Explorez un monde de pixel art, capturer des créatures et battre des adversaires dans ce jeu d'aventure !
+                    </p>
+                    <a href="#" target="_blank" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-semibold py-2 px-5 rounded-full transition">
+                        Découvrir le projet
+                    </a>
+                </div>
+            </div>
+
+        </section>
     
+    </main>
+    <script src="darkLightMode.js"></script>
 </body>
+
+<footer class="bg-gray-50 dark:bg-gray-900 bg-opacity-85 dark:bg-opacity-85 py-6 text-center text-gray-700 dark:text-gray-400">
+    <p>&copy; 2025 Jérémy Loubeyre. Tous droits réservés.</p>
+</footer>
 </html>
