--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                         Une application en C# sous Visual Studio 2022. Cette apllication a pour but de pouvoir gérer et organiser des hackathons. Elle permet d'enregistrer les participants, de créer des équipes et de planifier les épreuves.
 
                     </p>
-                    <a href="#" target="_blank" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-semibold py-2 px-5 rounded-full transition">
+                    <a href="projet-hackatinnov.html" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-semibold py-2 px-5 rounded-full transition">
                         Découvrir le projet
                     </a>
                 </div>
@@ -63,7 +63,7 @@
                     <p class="text-gray-600 dark:text-gray-300 mb-6">
                         Une application en flutter sous Android Studio. Le projet se nomme "L’Ancre de Breizh" un restaurant spécialisé dans la nourriture bretonne et l'application Mobile permet de consulter le menu, de passer des commandes et de réserver une table.
                     </p>
-                    <a href="#" target="_blank" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-semibold py-2 px-5 rounded-full transition">
+                    <a href="projet-ancredebreizh.html" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-semibold py-2 px-5 rounded-full transition">
                         Découvrir le projet
                     </a>
                 </div>
@@ -82,7 +82,7 @@
                         Un site web en HTML et CSS sous visual studio Code. Ce site a pour but de pouvoir visualiser toutes les installations sportive, tout les parkings à vélo ou parkings de véhicules et leurs disponibilités.
 
                     </p>
-                    <a href="#" target="_blank" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-semibold py-2 px-5 rounded-full transition">
+                    <a href="projet-hackathon.html" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-semibold py-2 px-5 rounded-full transition">
                         Découvrir le projet
                     </a>
                 </div> 
@@ -100,7 +100,7 @@
                     <p class="text-gray-600 dark:text-gray-300 mb-6">
                         Un jeu Python simple développé en équipe avec Pygame. Explorez un monde de pixel art, capturer des créatures et battre des adversaires dans ce jeu d'aventure !
                     </p>
-                    <a href="#" target="_blank" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-semibold py-2 px-5 rounded-full transition">
+                    <a href="projet-pikemon.html" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-semibold py-2 px-5 rounded-full transition">
                         Découvrir le projet
                     </a>
                 </div>
