--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact | Jérémy Loubeyre</title>
     <script src="https://cdn.tailwindcss.com/3.4.16"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
     <script>
         tailwind.config = { darkMode: "class" };
     </script>
@@ -38,37 +39,28 @@
             </p>
 
             <!-- Contact Form -->
-            <form action="submit_form.php" method="POST" class="grid grid-cols-1 md:grid-cols-2 gap-6">
+            <form action="https://formspree.io/f/xjkrvowl" method="POST" class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- Nom -->
                 <div class="col-span-1">
-                    <label for="name"
-                        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Nom</label>
-                    <input type="text" id="name" name="name" required
-                        class="w-full px-4 py-3 rounded-lg bg-gray-100 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:focus:ring-indigo-400" />
+                    <label for="name" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Nom</label>
+                    <input type="text" id="name" name="name" required class="w-full px-4 py-3 rounded-lg bg-gray-100 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:focus:ring-indigo-400" />
                 </div>
 
                 <!-- Email -->
                 <div class="col-span-1">
-                    <label for="email"
-                        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Email</label>
-                    <input type="email" id="email" name="email" required
-                        class="w-full px-4 py-3 rounded-lg bg-gray-100 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:focus:ring-indigo-400" />
+                    <label for="email" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Email</label>
+                    <input type="email" id="email" name="email" required class="w-full px-4 py-3 rounded-lg bg-gray-100 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:focus:ring-indigo-400" />
                 </div>
 
                 <!-- Message -->
                 <div class="col-span-1 md:col-span-2">
-                    <label for="message"
-                        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Message</label>
-                    <textarea id="message" name="message" rows="6" required
-                        class="w-full px-4 py-3 rounded-lg bg-gray-100 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:focus:ring-indigo-400 resize-none"></textarea>
+                    <label for="message" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Message</label>
+                    <textarea id="message" name="message" rows="6" required class="w-full px-4 py-3 rounded-lg bg-gray-100 dark:bg-gray-700 border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:focus:ring-indigo-400 resize-none"></textarea>
                 </div>
 
                 <!-- Submit -->
                 <div class="col-span-1 md:col-span-2 text-right">
-                    <button type="submit"
-                        class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-6 py-3 rounded-full shadow transition duration-200">
-                        Envoyer
-                    </button>
+                    <button type="submit" class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-6 py-3 rounded-full shadow transition duration-200">Envoyer</button>
                 </div>
             </form>
 
@@ -76,8 +68,7 @@
             <div class="mt-12 border-t pt-8 text-sm text-gray-700 dark:text-gray-300">
                 <p class="mb-2">
                     <strong>Email :</strong>
-                    <a href="mailto:jeremy.loubeyre44@gmail.com"
-                        class="text-indigo-500 hover:underline">jeremy.loubeyre44@gmail.com</a>
+                    <a href="mailto:jeremy.loubeyre44@gmail.com" class="text-indigo-500 hover:underline">jeremy.loubeyre44@gmail.com</a>
                 </p>
                 <p><strong>Téléphone :</strong> 07 67 96 37 24</p>
             </div>
@@ -87,10 +78,27 @@
     <!-- Script Dark Mode -->
     <script src="darkLightMode.js"></script>
 
-    <!-- Footer -->
-    <footer class="bg-gray-50 dark:bg-gray-900 py-6 text-center text-gray-700 dark:text-gray-400 mt-10">
-        <p>&copy; 2025 Jérémy Loubeyre. Tous droits réservés.</p>
-    </footer>
+    
 </body>
+
+
+<footer class="bg-gray-50 dark:bg-gray-900 py-6 text-center text-gray-700 dark:text-gray-400 mt-10">
+    <div class="flex flex-col lg:flex-row items-center justify-between px-6 max-w-2xl mx-auto">
+        <p class="lg:mb-0">&copy; 2025 Jérémy Loubeyre. Tous droits réservés.</p>
+
+        <!-- Réseaux sociaux -->
+        <div class="flex space-x-5 text-gray-600 dark:text-gray-300">
+        <a href="https://github.com/Jeremynator44" target="_blank" aria-label="GitHub"
+            class="hover:text-indigo-600 transition"><i data-lucide="github" class="w-5 h-5"></i></a>
+
+        <a href="https://www.linkedin.com/in/j%C3%A9r%C3%A9my-loubeyre-3416362b7" target="_blank" aria-label="LinkedIn"
+            class="hover:text-indigo-600 transition"><i data-lucide="linkedin" class="w-5 h-5"></i></a>
+
+        <a href="mailto:jeremy.loubeyre44@gmail.com" aria-label="Email"
+            class="hover:text-indigo-600 transition"><i data-lucide="mail" class="w-5 h-5"></i></a>
+        </div>
+    </div>
+    <script>lucide.createIcons();</script>
+</footer>
 
 </html>
