--- a/projet-hackatinnov.html
+++ b/projet-hackatinnov.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com/3.4.16"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
     <script>tailwind.config = { darkMode: 'class' }</script>
     <link rel="stylesheet" href="style.css" />
     <title>Hackat'Innov | Projet</title>
@@ -84,10 +85,25 @@
     </main>
 
     <script src="darkLightMode.js"></script>
-
-    <footer class="bg-gray-50 dark:bg-gray-900 py-6 text-center text-gray-700 dark:text-gray-400 mt-10">
-        <p>&copy; 2025 Jérémy Loubeyre. Tous droits réservés.</p>
-    </footer>
 </body>
+
+<footer class="bg-gray-50 dark:bg-gray-900 py-6 text-center text-gray-700 dark:text-gray-400 mt-10">
+    <div class="flex flex-col lg:flex-row items-center justify-between px-6 max-w-2xl mx-auto">
+        <p class="lg:mb-0">&copy; 2025 Jérémy Loubeyre. Tous droits réservés.</p>
+
+        <!-- Réseaux sociaux -->
+        <div class="flex space-x-5 text-gray-600 dark:text-gray-300">
+        <a href="https://github.com/Jeremynator44" target="_blank" aria-label="GitHub"
+            class="hover:text-indigo-600 transition"><i data-lucide="github" class="w-5 h-5"></i></a>
+
+        <a href="https://www.linkedin.com/in/j%C3%A9r%C3%A9my-loubeyre-3416362b7" target="_blank" aria-label="LinkedIn"
+            class="hover:text-indigo-600 transition"><i data-lucide="linkedin" class="w-5 h-5"></i></a>
+
+        <a href="mailto:jeremy.loubeyre44@gmail.com" aria-label="Email"
+            class="hover:text-indigo-600 transition"><i data-lucide="mail" class="w-5 h-5"></i></a>
+        </div>
+    </div>
+    <script>lucide.createIcons();</script>
+</footer>
 
 </html>
